--- a/Site/templates/dialog-info.html
+++ b/Site/templates/dialog-info.html
@@ -34,7 +34,7 @@
     <div id="plot-box">
         <b>Plot:</b>
         <div class="hideContent" id="plot-text">{{ movie.plot }}</div>
-        <a id="show-more" onclick="showMore()" href="#">Show more</a>
+        <button id="show-more" style="color: #00dbde" onclick="showMore()">Show more</button>
     </div>
     <div id="runtime-box">
         <b>Runtime:</b>
