--- a/Site/templates/index.html
+++ b/Site/templates/index.html
@@ -41,15 +41,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center" id="blockRandom" style="visibility: hidden">
-
-
-
-                    <img style="border-radius: 25px" width="200" height="270" id="imgRandom" name="imgRandom"
-                         style=""><br>
+                    <img style="border-radius: 25px" width="200" height="270" id="imgRandom" name="imgRandom"><br>
                     <br>
                     <h3 style="color: #f3f3f3" id="titleRandom" name="titleRandom"></h3>
                     <br>
-
                     <button class="btn btn-success">Seen</button>
                    <div style="color: white">{% include 'dialog-info.html' %}</div>
 
