--- a/Site/templates/user_profile.html
+++ b/Site/templates/user_profile.html
@@ -18,7 +18,7 @@
         <div class="scrolling-wrapper">
             <div class="line">
                 <div class="img">
-                    <img src="{% static "img/img_avatar.png" %}" class="image">
+                    {% include 'userprofile/update_user.html' %}
                 </div>
             </div>
             <div class="pleftmenu center">
