--- a/Site/templates/user_profile.html
+++ b/Site/templates/user_profile.html
@@ -13,12 +13,12 @@
     });
 </script>
 <body>
-<header class="masthead" style="height: 120%">
+<header class="banner" style="height: 120%">
     <div class="container userProfileBack">
         <div class="scrolling-wrapper">
             <div class="line">
                 <div class="img">
-                    {% include 'userprofile/update_user.html' %}
+                    {% include 'updateImage.html' %}
                 </div>
             </div>
             <div class="pleftmenu center">
@@ -27,11 +27,11 @@
         </div>
         <br>
 
-            <div class="modal fade" tabindex="-1" role="dialog" id="modal">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content"></div>
-                </div>
+        <div class="modal fade" tabindex="-1" role="dialog" id="modal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content"></div>
             </div>
+        </div>
 
         <div class="pleftmenu">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
