--- a/Site/templates/index.html
+++ b/Site/templates/index.html
@@ -5,7 +5,7 @@
 
     {% include "navbar.html" %}
 
-    <header class="masthead">
+    <header class="banner">
         <div class="container">
             <div class="row h-100 justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
