:100: NAO MEXO MAIS NISTO
ATE AMANHA ZUCA

--- a/Site/templates/index.html
+++ b/Site/templates/index.html
@@ -2,9 +2,7 @@
 {% block content %}
     <body id="page-top">
     <!-- NavBar-->
-
     {% include "navbar.html" %}
-
     <header class="banner">
         <div class="container">
             <div class="row h-100 justify-content-center text-center">
@@ -18,9 +16,9 @@
                 <div class="col-lg-8 align-self-baseline">
                     <h2 style="font-size: 25px; color: #f3f3f3">Click below to see a random TV Show or Movie</h2>
                     <br>
-                    <div class="wrap-login100-form-btn" style="width: 45%;">
-                        <div class="login100-form-bgbtn"></div>
-                        <a href="#random" class="login100-form-btn" onclick="getRandomMovie()">
+                    <div class="wrap-login-btn" style="width: 45%;">
+                        <div class="login-btn"></div>
+                        <a href="#random" class="login-form-btn" onclick="getRandomMovie()">
                             I'm Feeling Lucky
                         </a>
                         <a></a>
