--- a/Site/templates/login.html
+++ b/Site/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static "styles/accounts-css/main.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "styles/account.css" %}">
     </head>
 
     <form action="" method="post" autocomplete="off">
@@ -46,10 +46,10 @@
                         </div>
                         <br>
 
-                        <div class="container-login100-form-btn">
-                            <div class="wrap-login100-form-btn">
-                                <div class="login100-form-bgbtn"></div>
-                                <button class="login100-form-btn">
+                        <div class="container-btn">
+                            <div class="wrap-login-btn">
+                                <div class="login-btn"></div>
+                                <button class="login-form-btn">
                                     Sign in
                                 </button>
                             </div>
