--- a/Site/static/styles/main.css
+++ b/Site/static/styles/main.css
@@ -1,3 +1,326 @@
+html, body {
+    font-family: Calibri, serif;
+    font-size: 16px;
+    color: #1F2833;
+    scroll-behavior: smooth;
+}
+
+.link-item {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.link-item:hover, .link-item:focus {
+    text-decoration: none;
+    color: #f1f1f1;
+}
+
+.link-item.disabled {
+    color: #ffffff;
+    pointer-events: none;
+    cursor: default;
+}
+
+.button-css {
+    background: #45a29e;
+    border-radius: 1000px;
+    font-family: Calibri, serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    padding: 0.5em 5em;
+    box-shadow: -2px 2px rgba(31, 40, 51, 0.29);
+}
+
+.button-css:hover {
+    background: #3f8d89;
+}
+
+.user-box {
+    height: 80px;
+    border-radius: 10px;
+    box-shadow: 0.1em 0.1em #d4d4d4;
+    text-align: center
+}
+
+.scrolling-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+
+.line {
+    flex: 0 0 auto;
+    padding: 5px;
+}
+
+.pleftmenu {
+    padding-left: 2em;
+}
+
+.banner-movie-tv {
+    width: 160px;
+    height: 255px;
+    border-radius: 25px;
+}
+
+.rowHigh {
+    background-color: #479f9b;
+}
+
+.conts {
+    position: relative;
+}
+
+
+.conts .btn {
+    position: absolute;
+    top: 0%;
+    left: 45%;
+    color: red;
+    font-size: 45px;
+}
+
+.hideContent {
+    overflow: hidden;
+    line-height: 1em;
+    height: 2em;
+}
+
+.showContent {
+    line-height: 1em;
+    height: auto;
+}
+
+
+#mainNav {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    background-color: rgba(63, 136, 148, 0.56);
+    transition: background-color 0.2s ease;
+
+}
+
+#mainNav .navbar-nav .nav-item .nav-link {
+    color: rgb(221, 240, 255);
+    font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 0.9rem;
+    padding: 0.75rem 0;
+    margin-bottom: 2rem;
+}
+
+#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
+    color: #3f8d89;
+}
+
+@media (min-width: 992px) {
+    #mainNav {
+        box-shadow: none;
+        background-color: transparent;
+    }
+
+    #mainNav .navbar-brand {
+        color: rgba(255, 255, 255, 0.7);
+    }
+
+    #mainNav .navbar-brand:hover {
+        color: #fff;
+    }
+
+    #mainNav .navbar-nav .nav-item .nav-link {
+        color: rgba(255, 255, 255, 0.7);
+        padding: 0 1rem;
+    }
+
+    #mainNav .navbar-nav .nav-item .nav-link:hover {
+        color: #fff;
+    }
+
+    #mainNav .navbar-nav .nav-item:last-child .nav-link {
+        padding-right: 0;
+    }
+
+    #mainNav.navbar-scrolled {
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        background-color: #fff;
+    }
+
+    #mainNav.navbar-scrolled .navbar-brand {
+        color: #212529;
+    }
+
+    #mainNav.navbar-scrolled .navbar-brand:hover {
+        color: #479f9b;
+    }
+
+    #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
+        color: #212529;
+    }
+
+    #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
+        color: #337370;
+    }
+}
+
+header.banner {
+    padding-top: 10rem;
+    padding-bottom: calc(10rem - 72px);
+    background: linear-gradient(to bottom, rgba(30, 90, 92, 0.8) 0%, rgb(56, 62, 92) 100%), url("../img/background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+
+header.banner h1 {
+    font-size: 2.25rem;
+}
+
+@media (min-width: 992px) {
+    header.banner {
+        height: 100vh;
+        min-height: 40rem;
+        padding-top: 72px;
+        padding-bottom: 0;
+    }
+
+    header.banner p {
+        font-size: 1.15rem;
+    }
+
+    header.banner h1 {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    header.banner h1 {
+        font-size: 3.5rem;
+    }
+}
+
+.bg-primary {
+    background-color: #57bbdf;
+    background: linear-gradient(to top, rgba(30, 90, 92, 0.91) 0%, rgb(56, 62, 92) 100%), url("../img/background.jpg");
+}
+
+.page-section {
+    padding: 8rem 0;
+}
+
+a.bg-primary:hover, a.bg-primary:focus,
+button.bg-primary:hover,
+button.bg-primary:focus {
+    background-color: #ee3e0d !important;
+}
+
+.justify-content-center {
+    justify-content: center !important;
+}
+
+hr.divider {
+    max-width: 3.25rem;
+    border-width: 0.2rem;
+    border-color: #45a29e;
+}
+
+.userProfileBack {
+    min-height: 600px;
+    border-radius: 12px;
+    position: relative;
+    bottom: -140px;
+    background: #fff;
+    padding: 60px;
+    box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
+}
+
+.images {
+    font-size: 0;
+    letter-spacing: -1px;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.images-inner {
+    box-shadow: 0 -5px 8px rgba(0, 0, 0, .5) inset;
+    position: absolute;
+    height: 20px;
+    bottom: 0;
+    width: 100%;
+}
+
+.profile-nav {
+    background-color: #fff;
+    border-bottom: 1px solid #eaeaea;
+}
+
+.wrapper {
+    max-width: 1000px;
+}
+
+.avatar {
+    position: absolute;
+    width: 100px;
+    top: 150px;
+    left: 15px;
+    background: #fff;
+    border-radius: 50px;
+    box-shadow: 0 0 2px #000;
+    height: 100px;
+    overflow: hidden;
+    display: inline-block;
+    z-index: 10;
+}
+
+.text_center {
+    text-align: center;
+}
+
+.center {
+    margin: auto 0px;
+}
+
+.float_left {
+    float: left;
+}
+
+.image {
+    opacity: 1;
+    width: 100px;
+    height: 100px;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    border-radius: 100%;
+}
+
+.img:hover .image {
+    opacity: 0.3;
+}
+
+.img:hover {
+    opacity: 1;
+}
+
+.list-inline > li {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+
+.stats-list .stat-item {
+    color: #555;
+    padding: 0 10px;
+    border-left: 1px solid #e5e5e5;
+    text-align: center;
+}
+
+.stats-list .stat-item:first-child {
+    border-left: none;
+}
+
 a {
     color: #00dbde;
     font-family: Calibri;
@@ -19,7 +342,6 @@ a:hover {
     color: #479f9b;
 }
 
-/*---------------------------------------------*/
 h1, h2, h3, h4, h5, h6 {
     margin: 0px;
 }
@@ -132,23 +454,6 @@ iframe {
     border: none !important;
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
-.txt1 {
-    font-family: Poppins-Regular;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #666666;
-}
-
-.txt2 {
-    font-family: Poppins-Regular;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #333333;
-    text-transform: uppercase;
-}
-
 .bg1 {
     background-color: #3b5998
 }
@@ -161,9 +466,6 @@ iframe {
     background-color: #ea4335
 }
 
-
-/*//////////////////////////////////////////////////////////////////
-[ login ]*/
 .limiter {
     width: 100%;
     margin: 0 auto;
@@ -193,9 +495,6 @@ iframe {
     overflow: hidden;
 }
 
-
-/*------------------------------------------------------------------
-[ Form ]*/
 
 .login100-form {
     width: 100%;
@@ -307,10 +606,7 @@ iframe {
     color: #45A29E;
 }
 
-
-/*------------------------------------------------------------------
-[ Button ]*/
-.container-login100-form-btn {
+.container-btn {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -320,7 +616,7 @@ iframe {
     justify-content: center;
 }
 
-.wrap-login100-form-btn {
+.wrap-login-btn {
     width: 100%;
     display: block;
     position: relative;
@@ -336,7 +632,7 @@ iframe {
     -ms-box-shadow: 0 5px 30px 0px rgba(3, 216, 222, 0.2);
 }
 
-.login100-form-bgbtn {
+.login-btn {
     position: absolute;
     z-index: -1;
     width: 300%;
@@ -355,7 +651,7 @@ iframe {
     transition: all 0.4s;
 }
 
-.login100-form-btn {
+.login-form-btn {
     font-family: Calibri, serif;
     font-size: 16px;
     color: #fff;
@@ -374,7 +670,7 @@ iframe {
     height: 50px;
 }
 
-.wrap-login100-form-btn:hover .login100-form-bgbtn {
+.wrap-login-btn:hover .login-btn {
     left: 0;
 }
 
