--- a/Site/templates/footer.html
+++ b/Site/templates/footer.html
@@ -1,5 +1,4 @@
-<!-- Footer -->
-<footer class="bg-light py-5">
+<footer class="bg-light">
     <div class="container">
         <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
     </div>
