--- a/Site/templates/sign_up.html
+++ b/Site/templates/sign_up.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static "styles/accounts-css/main.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "styles/account.css" %}">
     </head>
 
     <form action="" method="post" autocomplete="off">
@@ -70,10 +70,10 @@
                         </div>
 
 
-                        <div class="container-login100-form-btn">
-                        <div class="wrap-login100-form-btn">
-                            <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn">
+                        <div class="container-btn">
+                        <div class="wrap-login-btn">
+                            <div class="login-btn"></div>
+                            <button class="login-form-btn">
                                 Sign up
                             </button>
                         </div>
