--- a/Site/templates/login.html
+++ b/Site/templates/login.html
@@ -59,7 +59,18 @@
                             </div>
                         </div>
                     {% else %}
-                        User is logged... :(
+                        <div class="page-wrap d-flex flex-row align-items-center">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-12 text-center">
+                                        <img src="{% static "img/logo.png" %}" width="120em">
+                                        <span class="display-1 d-block">500</span>
+                                        <div class="mb-4 lead">User already logged in.</div>
+                                        <a href="{% url 'index' %}" class="btn btn-link">Back to Home</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     {% endif %}
 
                 </div>
