--- a/Site/templates/sign_up.html
+++ b/Site/templates/sign_up.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static "styles/account.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "\styles/account.css" %}">
     </head>
 
     <form action="" method="post" autocomplete="off">
@@ -81,7 +81,18 @@
                             Already have an account? <a href="{% url 'login' %}" style="; padding-left:0.2em">Log in</a>
                         </div>
                     {% else %}
-                        User is logged... :(
+                        <div class="page-wrap d-flex flex-row align-items-center">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-12 text-center">
+                                        <img src="{% static "img/logo.png" %}" width="120em">
+                                        <span class="display-1 d-block">500</span>
+                                        <div class="mb-4 lead">User already logged in.</div>
+                                        <a href="{% url 'index' %}" class="btn btn-link">Back to Home</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     {% endif %}
                     </div>
                 </div>
